src/objects/SPEX_DB_Part_Summary__c/SPEX_DB_Part_Summary__c.object-meta.xml
<CustomObject>
    <description>object to hold SPEX DB data by part and region.</description>
    <label>SPEX DB Part Summary</label>
    <nameField>
        <displayFormat>SPEXPART-{00000000}</displayFormat>
        <label>SPEX DB Part Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPEX DB Part Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>