src/objects/SPEX_DB_Part_Summary__c/fields/ABC_Code__c.field-meta.xml
<CustomField>
    <fullName>ABC_Code__c</fullName>
    <description>The code prefix used with part numbers</description>
    <label>ABC Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>