src/objects/SPEX_DB_Part_Summary__c/fields/Demand_By_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Demand_By_EMEA__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Demand of Parts in EMEA Region</description>
    <label>Demand By EMEA</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>