src/objects/SPEX_DB_Part_Summary__c/fields/Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_Description__c</fullName>
    <description>Full description of the given part number</description>
    <label>Part Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>