src/objects/SPEX_DB_Part_Summary__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>