src/objects/SPEX_DB_Part_Summary__c/fields/Risk_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Risk_Cnt__c</fullName>
    <formula>IF((Status_AMERICAS__c = &apos;At_Risk&apos;), 1, 0) + IF((Status_APAC__c = &apos;At_Risk&apos; ), 1, 0) + IF((Status_EMEA__c = &apos;At_Risk&apos; ), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>