src/objects/SPEX_DB_Part_Summary__c/fields/Risk_Part__c.field-meta.xml
<CustomField>
    <fullName>Risk_Part__c</fullName>
    <formula>IF((StockOut_Part__c = 0 &amp;&amp; Risk_Cnt__c &gt; 0), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk_Part</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>