src/objects/SPEX_DB_Part_Summary__c/fields/RiskGreyCnt__c.field-meta.xml
<CustomField>
    <fullName>RiskGreyCnt__c</fullName>
    <formula>Risk_Cnt__c + Grey_Cnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk_Grey_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>