src/objects/SPEX_DB_Part_Summary__c/fields/Stockout__c.field-meta.xml
<CustomField>
    <fullName>Stockout__c</fullName>
    <description>Stock Out = Total Demand minus Total Stock</description>
    <formula>Total_Demand__c  -  Total_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stockout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>