src/objects/SPEX_DB_Part_Summary__c/fields/Stockout_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Stockout_Cnt__c</fullName>
    <formula>IF((Status_AMERICAS__c = &apos;Stock_Out&apos;), 1, 0) + IF((Status_APAC__c = &apos;Stock_Out&apos; ), 1, 0) + IF((Status_EMEA__c = &apos;Stock_Out&apos; ), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stockout_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>