src/objects/SPEX_DB_Part_Summary__c/listViews/ALL_SPEX_PARTS.listView-meta.xml
<ListView>
    <fullName>ALL_SPEX_PARTS</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Part_Description__c</columns>
    <columns>Demand_By_Americas__c</columns>
    <columns>Stock_By_Americas__c</columns>
    <columns>Stockout_Americas__c</columns>
    <columns>Status_AMERICAS__c</columns>
    <columns>Demand_By_APAC__c</columns>
    <columns>Stock_By_APAC__c</columns>
    <columns>Status_APAC__c</columns>
    <columns>Stockout_APAC__c</columns>
    <columns>Demand_By_EMEA__c</columns>
    <columns>Stock_By_EMEA__c</columns>
    <columns>Stockout_EMEA__c</columns>
    <columns>Status_EMEA__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL SPEX PARTS</label>
</ListView>